# WOMBAT_ext

./: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  PR.md  QS.md  README.md  docker-compose.yaml  main.py  plan.md  pyproject.toml  requirements.txt
.github/workflows/: static.yml
client/: AUDIT.md  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts  vitest.config.ts
client/src/: App.css  App.tsx  index.css  main.tsx
client/src/__tests__/: App.test.tsx  App_DownloadWatcher.test.tsx  CsvPreview.test.tsx  EditorPanel.test.tsx  Gantt.test.tsx  JsonEditor_interactions.test.tsx  LibraryPanel.test.tsx  Navbar.test.tsx  Results.test.tsx  ResultsCompare.test.tsx  ResultsSummary.test.tsx  Results_branches.test.tsx  SavedLibrariesBar.test.tsx  SimulationManager.interactions.test.tsx  WebSocketClient.test.tsx  YamlJsonViewer.test.tsx  apiContext.test.tsx  main.test.tsx  mockApiClient.test.ts  useLibrary_actions.test.tsx  useLibrary_readFile.test.tsx  useSession.test.tsx  useSimulation.test.tsx  useTemp.test.tsx  useToasts.test.tsx
client/src/api/: index.ts
client/src/components/: CsvPreview.tsx  EditorPanel.tsx  FileSelector.css  FileSelector.tsx  JsonEditor.css  JsonEditor.tsx  LibraryPanel.tsx  Navbar.css  Navbar.tsx  OrbitResultsSummary.tsx  PageWithLibrary.tsx  ResizeWrapper.tsx  RestClient.tsx  ResultsSummary.tsx  SavedLibrariesBar.tsx  SavedLibrariesDropdown.tsx  SelectedFileInfo.tsx  SettingsEditor.tsx  SimulationControls.tsx  ThemeSelector.tsx  ToastManager.css  ToastManager.tsx  WebSocketClient.css  WebSocketClient.tsx  YamlJsonViewer.tsx
client/src/components/json-editor/: ArrayField.tsx  ErrorList.tsx  FieldLabel.tsx  ObjectField.tsx  PrimitiveField.tsx
client/src/components/json-editor/utils/: path.ts  schema.ts  schemaCache.ts
client/src/context/: ApiContext.tsx  WebSocketContext.tsx
client/src/hooks/: useLibrary.ts  useOrbitSimulation.ts  useSession.ts  useSimulation.ts  useTemp.ts  useToasts.ts
client/src/pages/: ConnectionManager.tsx  Gantt.tsx  LayoutMap.tsx  Operations.tsx  Results.tsx  ResultsCompare.tsx  RunSimulation.tsx  SimulationManager.tsx  Splash.tsx
client/src/test/: setupTests.ts  test-utils.tsx
client/src/types/: index.ts
client/src/utils/: blob.ts  results.ts  websocketHandlers.ts
client/src/workers/: mockApiClient.ts  mockApiWorker.ts  workerFetch.ts
client/src/workers/mock/: files.ts  handlers.ts  orbit.ts  simulation.ts  state.ts  types.ts
docs/client/: layout_map_plan.md  results_comparison_plan.md
docs/server/: index.md  migration.md  path_safety.md  routers.md  services.md
examples/: README_dinwoodie_gantt.md  dinwoodie_gantt_chart.py  dinwoodie_gantt_chart_plotly.py  run_orbit_from_saved.py
examples/api/: websocket_fastapi_demo.py  wombat_simulation_server.py
orbit_api/: requirements.txt
orbit_api/api/: __init__.py  simulation_runner.py
server/: AUDIT.md  client_manager.py  event_handlers.py  index.yaml  library_manager.py  main.py  message_handler.py  models.py  requirements.txt  rest_api.py  simulation_manager.py  simulations.py  start.bat
server/routers/: __init__.py  library.py  orbit.py  saved.py  schemas.py  session.py  simulations.py  temp.py
server/services/: libraries.py  saved_libraries.py
server/utils/: paths.py
tests/: conftest.py
tests/server_tests/: README.md  __init__.py  requirements-test.txt  test_client_manager.py  test_event_handlers.py  test_main.py  test_message_handler.py  test_rest_api.py  test_simulation_manager.py
tests/unit/: test_gantt.py
wombat/api/: __init__.py  simulation_results.py  simulation_runner.py  simulation_setup.py
wombat/core/: simulation_api.py
wombat/utilities/: gantt.py  schema_gen.py
wombat_api/: requirements.txt
wombat_api/api/: simulation_results.py  simulation_runner.py  simulation_setup.py
wombat_api/utilities/: __init__.py  schema_gen.py
