[project]
name = "wombat_ext"
dynamic = ["version"]
authors = [{name = "Rob Hammond", email = "rob.hammond@nrel.gov"}]
readme = {file = "README.md", content-type = "text/markdown"}
description = "Windfarm operations and maintenance cost-benefit analysis tool"
requires-python = ">=3.12, <3.13"
dependencies = [
    "annotated-types==0.7.0",
    "anyio==4.9.0",
    "argon2-cffi==25.1.0",
    "argon2-cffi-bindings==25.1.0",
    "arrow==1.3.0",
    "asttokens==3.0.0",
    "async-lru==2.0.5",
    "attrs==25.3.0",
    "babel==2.17.0",
    "beautifulsoup4==4.13.4",
    "bleach==6.2.0",
    "certifi==2025.8.3",
    "cffi==1.17.1",
    "cfgv==3.4.0",
    "charset-normalizer==3.4.2",
    "choreographer==1.0.9",
    "click==8.2.1",
    "colorama==0.4.6",
    "comm==0.2.3",
    "contourpy==1.3.3",
    "coverage==7.10.1",
    "cycler==0.12.1",
    "debugpy==1.8.15",
    "decorator==5.2.1",
    "defusedxml==0.7.1",
    "distlib==0.4.0",
    "dnspython==2.7.0",
    "email-validator==2.2.0",
    "executing==2.2.0",
    "fastapi==0.116.1",
    "fastapi-cli==0.0.8",
    "fastapi-cloud-cli==0.1.5",
    "fastjsonschema==2.21.1",
    "filelock==3.18.0",
    "fonttools==4.59.0",
    "fqdn==1.5.1",
    "geographiclib==2.0",
    "geopy==2.4.1",
    "h11==0.16.0",
    "httpcore==1.0.9",
    "httptools==0.6.4",
    "httpx==0.28.1",
    "identify==2.6.12",
    "idna==3.10",
    "iniconfig==2.1.0",
    "ipykernel==6.30.0",
    "ipython==9.4.0",
    "ipython-pygments-lexers==1.1.1",
    "isoduration==20.11.0",
    "isort==6.0.1",
    "jedi==0.19.2",
    "jinja2==3.1.6",
    "json5==0.12.0",
    "jsonpointer==3.0.0",
    "jsonschema==4.25.0",
    "jsonschema-specifications==2025.4.1",
    "jupyter-client==8.6.3",
    "jupyter-core==5.8.1",
    "jupyter-events==0.12.0",
    "jupyter-lsp==2.2.6",
    "jupyter-server==2.16.0",
    "jupyter-server-terminals==0.5.3",
    "jupyterlab==4.4.5",
    "jupyterlab-pygments==0.3.0",
    "jupyterlab-server==2.27.3",
    "kaleido==0.1.0.post1",
    "kiwisolver==1.4.8",
    "lark==1.2.2",
    "logistro==1.1.0",
    "markdown-it-py==3.0.0",
    "markupsafe==3.0.2",
    "matplotlib==3.10.5",
    "matplotlib-inline==0.1.7",
    "mdurl==0.1.2",
    "mistune==3.1.3",
    "mypy==1.17.1",
    "mypy-extensions==1.1.0",
    "narwhals==2.0.1",
    "nbclient==0.10.2",
    "nbconvert==7.16.6",
    "nbformat==5.10.4",
    "nest-asyncio==1.6.0",
    "networkx==3.5",
    "nodeenv==1.9.1",
    "notebook-shim==0.2.4",
    "numpy==2.3.2",
    "orjson==3.11.1",
    "overrides==7.7.0",
    "packaging==25.0",
    "pandas==2.3.1",
    "pandocfilters==1.5.1",
    "parso==0.8.4",
    "pathspec==0.12.1",
    "pillow==11.3.0",
    "platformdirs==4.3.8",
    "plotly==6.2.0",
    "pluggy==1.6.0",
    "polars==1.32.0",
    "pre-commit==4.2.0",
    "prometheus-client==0.22.1",
    "prompt-toolkit==3.0.51",
    "psutil==7.0.0",
    "pure-eval==0.2.3",
    "pyarrow==21.0.0",
    "pycparser==2.22",
    "pydantic==2.11.7",
    "pydantic-core==2.33.2",
    "pygments==2.19.2",
    "pyparsing==3.2.3",
    "pytest==8.4.1",
    "pytest-asyncio==1.1.0",
    "pytest-check==2.5.3",
    "pytest-cov==6.2.1",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.1.1",
    "python-json-logger==3.3.0",
    "python-multipart==0.0.20",
    "pytz==2025.2",
    "pyupgrade==3.20.0",
    "pywin32==311",
    "pywinpty==2.0.15",
    "pyyaml==6.0.2",
    "pyzmq==27.0.1",
    "referencing==0.36.2",
    "requests==2.32.4",
    "rfc3339-validator==0.1.4",
    "rfc3986-validator==0.1.1",
    "rfc3987-syntax==1.1.0",
    "rich==14.1.0",
    "rich-toolkit==0.14.9",
    "rignore==0.6.4",
    "rpds-py==0.26.0",
    "ruff==0.12.7",
    "scipy==1.16.1",
    "send2trash==1.8.3",
    "sentry-sdk==2.34.1",
    "setuptools==80.9.0",
    "shellingham==1.5.4",
    "simplejson==3.20.1",
    "simpy==4.1.1",
    "six==1.17.0",
    "sniffio==1.3.1",
    "soupsieve==2.7",
    "stack-data==0.6.3",
    "starlette==0.47.2",
    "terminado==0.18.1",
    "tinycss2==1.4.0",
    "tokenize-rt==6.2.0",
    "tornado==6.5.1",
    "traitlets==5.14.3",
    "typer==0.16.0",
    "types-attrs==19.1.0",
    "types-python-dateutil==2.9.0.20250708",
    "types-pyyaml==6.0.12.20250516",
    "types-typed-ast==1.5.8.7",
    "typing-extensions==4.14.1",
    "typing-inspection==0.4.1",
    "tzdata==2025.2",
    "uri-template==1.3.0",
    "urllib3==2.5.0",
    "uvicorn==0.35.0",
    "virtualenv==20.33.0",
    "watchfiles==1.1.0",
    "wcwidth==0.2.13",
    "webcolors==24.11.1",
    "webencodings==0.5.1",
    "websocket-client==1.8.0",
    "websockets==15.0.1"
]

[project.optional-dependencies]
dev = [
    "pre-commit>=2.20",
    "isort>=5.10",
    "pytest>=7",
    "pytest-cov>=4",
    "pytest-check",
    "mypy",
    "ruff>=0.2",
    "pyupgrade",
]
docs = [
    "jupyter-book>=0.15",
    "myst-nb>=0.16",
    "myst-parser>=0.17",
    "linkify-it-py>=2",
    "sphinx-autodoc-typehints",
    "sphinxcontrib-autoyaml",
    "sphinxcontrib-bibtex>=2.4",
    "sphinxcontrib-spelling>=7",
]
all = ["wombat_ext[dev,docs]"]